Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101628

Pinch gestures are not cancelled when pinch.accepted property is set to false on macOS.

    XMLWordPrintable

Details

    • macOS
    • 175681bbbc (qt/qtdeclarative/dev) 175681bbbc (qt/tqtc-qtdeclarative/dev) 9a18deda60 (qt/tqtc-qtdeclarative/5.15) 0f383a9db9 (qt/qtdeclarative/6.3) 0f383a9db9 (qt/tqtc-qtdeclarative/6.3) 0f383a9db9 (qt/tqtc-qtdeclarative/6.3.1)

    Description

      According to documentation (https://doc.qt.io/qt-5/qml-qtquick-pincharea.html#pinchStarted-signal):
      "To ignore this gesture set the pinch.accepted property to false. The gesture will be canceled and no further events will be sent."

      This was working on Android and Windows but on macOS (tested with macOS 10.15 and 12.2) pinch gestures were not cancelled (with Qt 5.15.8 and 6.2.3).

      Reproducer (qml file) is attached.

      Expected behavior:
      The pinch gestures should be cancelled and rectangle should not rotate/scale when pinched.
      Actual behavior:
      pinching the rectangle rotates and scales the rectangle.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            foxxx Tuukka Kettunen
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: