PinchArea: ignore ZoomNativeGesture and RotateNativeGesture if told to

As with most event-handling Items, the user can reject the first event
by setting accepted to false in QML. It was implemented for touch
events, but not for native gesture events. Amends
d896d76b0f2ff0387cd09a04107ea5df087268e1

Fixes: QTBUG-101628
Pick-to: 5.15 6.2 6.3
Change-Id: I05a15cb71e6c97c35d6e56a58d9d59028fe33462
Reviewed-by: Jan Arve Sæther <jan-arve.saether@qt.io>